# dynamic_leds

./: .gitignore  README.md  basic-z-mapping.py  helpers.py  images-to-2D.py  mapping.py  pyproject.toml  setup.cfg
dynamic_leds/: __init__.py
dynamic_leds.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dynamic_leds/effects/: WaveEffect2D.py
dynamic_leds/effects/3d/: _template_3d.py  image.py  random_plane.py  sparkle.py  wipe.py
dynamic_leds/effects/flat/: TextScroll2D.py  _template.py
dynamic_leds/effects/line/: _template.py  by_number.py  cycle_white.py  rainbow_wave.py  toggle_individual.py  trace.py
dynamic_leds/misc/: basic_dynamic.py  basic_neopixel.py  find-local-webcam.py  images-to-2D.py  mapping.py  tree-scan.py  treePlot.nb
dynamic_leds/misc/old/: 2D-to-3D.py  run.py
dynamic_leds/models/: camera.py  effect.py  led.py  scan.py  scene.py
dynamic_leds/scripts/: find-webcams.py  init_scene.py  process-scan.py  run.py  scan.py  test-brightness.py  test-lights.py  test-webcam.py  test_camera.py
dynamic_leds/tests/: test-webcam.py
dynamic_leds/util/: color.py  image.py
examples/multi_cam/: config.yaml
examples/single_cam/: config.yaml  main.py
examples/single_cam_flat/: config.yaml
examples/single_cam_flat/scan/: positions.csv  positions_camera_frame_180.csv  positions_camera_frame_270.csv  scan_details.yaml
old/: rotate_images.py
scan2/: positions_camera_frame_0.csv  positions_camera_frame_90.csv
scripts/: run.sh  run_interactive.py  run_interface.py  setup.sh
src/misc/: rotate_images.py
src/models/: effect.py
(+1 files in other folders)
