[metadata]
name = dynamic_leds
version = 1.0
author = <Jai Mangos>
author_email = jaimangos@gmail.com
description = Dynamic LEDs - A module for scanning and controlling individually addressable LEDs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmang00/dynamic_leds
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:


[options.packages.find]
include = dynamic_leds